# eyedropper

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  build.rs  eyedropper.doap  meson.build  meson_options.txt  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
build-aux/: com.benzler.colors.Devel.json  com.github.finefindus.eyedropper.Devel.json  com.github.finefindus.eyedropper.json
data/: com.benzler.colors.desktop.in.in  com.benzler.colors.gschema.xml.in  com.benzler.colors.metainfo.xml.in.in  com.github.finefindus.eyedropper.SearchProvider.service.in  com.github.finefindus.eyedropper.desktop.in.in  com.github.finefindus.eyedropper.gschema.xml.in  com.github.finefindus.eyedropper.metainfo.xml.in.in  com.github.finefindus.eyedropper.search-provider.ini  com.github.finefindus.eyedropper.service.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/assets/: basic.txt  gnome.txt  svg.txt  xkcd.txt
data/resources/ui/: color-entry.ui  color-format-row.blp  color-format-row.ui  color-model-entry.ui  color-scale.ui  hex-entry.ui  history-item.blp  palette-window.blp  palette-window.ui  placeholder-page.blp  preferences.blp  preferences.ui  shortcuts.blp  shortcuts.ui  window.blp  window.ui
data/resources/ui/preferences/: custom-format-row.blp  custom-format-row.ui  name-sources-dialog.blp  name-sources-dialog.ui  preferences.blp  preferences.ui
po/: Eyedropper.pot  LINGUAS  POTFILES.in  ar.po  bg.po  bn.po  ca.po  cs.po  de.mo  de.po  es.po  et.po  eu.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  ka.po  kk.po  kw.po  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po
scripts/: make-pot.sh
src/: application.rs  config.rs.in  main.rs  utils.rs  window.rs
src/color/: color.rs  color_names.rs  mod.rs  observer.rs
src/colors/: cmyk.rs  color.rs  color_names.rs  formatter.rs  hunterlab.rs  illuminant.rs  mod.rs  notation.rs  parser.rs  position.rs
src/model/: color.rs  color_format.rs  history.rs  mod.rs
src/widgets/: about_window.rs  color_entry.rs  color_format_row.rs  color_model_entry.rs  color_scale.rs  hex_entry.rs  history_item.rs  mod.rs  palette_dialog.rs  placeholder_page.rs  preferences.rs  preferences_window.rs
src/widgets/preferences/: color_format.rs  custom_format_row.rs  mod.rs  name_set_dialog.rs  preferences_window.rs
