[package]
name = "eyedropper"
version = "2.0.1"
authors = ["FineFindus <finefindusgh@gmail.com>"]
edition = "2024"
description = "Pick and format colors"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://apps.gnome.org/Eyedropper/"
repository = "https://github.com/finefindus/eyedropper"
rust-version = "1.85"


# override package level optimization, to always be maximum
[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.1"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.18.0"
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
glib = "0.20"
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
ashpd = { version = "0.10", default-features = false, features = [
    "async-std",
    "gtk4",
] }
futures = "0.3"
rand = "0.9"
bytes = "1.4"
search-provider = { version = "0.11", features = ["gdk-pixbuf"] }
nom = "8.0"
phf = { version = "0.11.2", features = ["macros"] }
zbus = "5.2"
palette = "0.7.2"
