[package]
name = "eyedropper"
version = "2.1.0"
authors = ["FineFindus <finefindusgh@gmail.com>"]
edition = "2024"
description = "Pick and format colors"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://apps.gnome.org/Eyedropper/"
repository = "https://github.com/finefindus/eyedropper"
rust-version = "1.92"


# override package level optimization, to always be maximum
[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
phf = { version = "0.13", default-features = false }
phf_codegen = "0.13"

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.18.0"
gtk = { version = "0.11.0-alpha.2", package = "gtk4", features = [
    "v4_22",
    "gnome_49",
] }
adw = { package = "libadwaita", version = "0.9.0-alpha.0", features = ["v1_9"] }
ashpd = { version = "0.13.0-alpha", default-features = false, features = [
    "async-io",
    "gtk4",
    "global_shortcuts",
    "screenshot",
    "background",
] }
futures = "0.3"
rand = "0.9"
bytes = "1.4"
search-provider = { version = "0.13.0-alpha.0", features = ["gdk-pixbuf"] }
nom = "8.0"
phf = { version = "0.13", features = ["macros"] }
zbus = "5.2"
palette = "0.7.2"
